--- a/site/backend/gulp/scss/base/_variables.scss
+++ b/site/backend/gulp/scss/base/_variables.scss
@@ -8,6 +8,7 @@ $secon:#b11b23;
 $white:#fff;
 $black:#000;
 $gray: rgb(209, 209, 209);
+$whiter: hsl(86, 85%, 95%);
 
 // Aux
 $aux: rgb(17, 226, 17);
@@ -46,4 +47,4 @@ $separation: 5rem;
 //-----------------------
 
 // metrics
-$brad: .7rem; //border radius
+$brad: .5rem; //border radius
