--- a/site/backend/gulp/scss/layout/main/_index.scss
+++ b/site/backend/gulp/scss/layout/main/_index.scss
@@ -9,6 +9,7 @@
     justify-items: center;
     align-items: center;
     margin: 20px;
+    border-radius: 0.8rem;
 }
 .product:hover{
     box-shadow: 0px 0px 10px rgb(100,100,100);
