--- a/site/backend/gulp/scss/layout/users/_login.scss
+++ b/site/backend/gulp/scss/layout/users/_login.scss
@@ -1,22 +1,189 @@
-.loginForm {
-    border: 3px solid #b60808;
-    height: 80vh;
-    width: 70vw;
-    font-size: x-large;
-    margin-left: 230px;
-    padding: 5px;
-    margin-top: 8px;
-    margin-bottom: 8px;
+body {
+    background: hsl(86, 85%, 95%);
+}
 
-    align-items: center;
+
+/*--------------------
+Buttons
+--------------------*/
+.btn {
+    display: block;
+    background: hsl(86, 76%, 71%);
+    color: hsl(0, 0, 100);
+    text-decoration: none;
+    margin: 20px 0;
+    padding: 15px 15px;
+    border-radius: 5px;
+    position: relative;
+  
+    &::after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: all .2s ease-in-out;
+        box-shadow: inset 0 3px 0 hsla(0, 0, 0, 0), 0 3px 3px hsla(0, 0, 0, .2);
+        border-radius: 5px;
+    }
+  
+    &:hover::after {
+        background: hsla(0, 0, 0, 0.1);
+        box-shadow: inset 0 3px 0 hsla(0, 0, 0, 0.2);
+    }
+  
+} 
+.btn-social {
+    padding-left: 64px;
+    position: relative;
+    z-index: 1;
+  
+    .fa {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 50px;
+        height: 100%;
+        text-align: center;
+        background: hsla(0, 0, 0, 0.1);
+        line-height: 3.2;
+        border-radius: 5px 0 0 5px;
+    }
+  
+}
+.btn-facebook {
+    background-color: hsl(221, 44%, 41%);
+}
+.btn-twitter {
+    background-color: hsl(206, 82%, 63%);
+}
+.btn-google {
+    background-color: hsl(7, 71%, 55%); 
+}
+.btn-linkedin {
+    background-color: hsl(196, 100%, 43%);
+}
+
+
+/*--------------------
+Form
+--------------------*/
+.form {
+  
+    fieldset {
+        border: none;
+        padding: 0;
+        margin: 20px 0;
+        position: relative;
+    
+        input {
+            width: 100%;
+            height: 48px;
+            color: hsl(0, 0, 20);
+            padding: 15px 40px 15px 15px;
+            border-radius: 5px;
+            font-size: 14px;
+            outline: none!important;
+            border: 1px solid hsla(0, 0, 0, 0.3);
+            box-shadow: inset 0 1px 4px hsla(0, 0, 0, 0.2);
+            vertical-align: top;
+        }
+     
+    }
+  
+    button {
+        width: 100%;
+        outline: none!important;
+        background: $secon;
+        border: none;
+        text-transform: uppercase;
+        font-weight: bold;
+        box-shadow: 0 3px 0px hsla(86, 21%, 44%, 0.2);
+        text-shadow: 0 2px 3px hsla(0, 0, 0, 0.2);
+    }
+  
+}
+
+
+
+/*--------------------
+Signup
+--------------------*/
+.signupContainer{
+    height: 60vh;
+    position: relative;
+}
+
+.signup {
+    position: absolute;
+    top: 25rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    width: 800px;
+    background: hsl(0, 0, 100);
+    border-radius: 10px;
+    box-shadow: 0 3px 25px hsla(0, 0, 0, 0.2);
+    overflow: hidden;
     display: flex;
-    justify-content: center;
 }
 
-.loginForm input {
-    font-size:large;
+.signup-connect,
+.signup-classic
+{
+    width: 50%;
+    padding: 30px 50px;
 }
 
-.loginForm label {
-    font-size:x-large;
+.signup-connect {
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#5ee0ff+0,3690f0+37,1eaefc+59,5ee0ff+86 */
+    background: #5ee0ff; /* Old browsers */
+    background: -moz-linear-gradient(45deg, #5ee0ff 0%, #3690f0 37%, #1eaefc 59%, #5ee0ff 86%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, #5ee0ff 0%,#3690f0 37%,#1eaefc 59%,#5ee0ff 86%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, #5ee0ff 0%,#3690f0 37%,#1eaefc 59%,#5ee0ff 86%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5ee0ff', endColorstr='#5ee0ff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    color: hsl(0, 0, 100);
+  
+    h1 {
+        font-size: 30px;
+        margin-top: 10px;
+        margin-bottom: 40px;
+        text-shadow: 0 2px 3px hsla(0, 0, 0, 0.1);
+    }
+  
+}
+
+.signup-classic {
+  
+    h2 {
+        font-size: 16px;
+        font-weight: normal;
+        margin-top: 23px;
+        margin-bottom: 43px;
+        text-shadow: 0 2px 3px hsla(0, 0, 0, 0.1);
+    }
+  
+    fieldset::after {
+        content: '\f007';
+        font-family: FontAwesome;
+        position: absolute;
+        right: 15px;
+        top: 17px;
+        z-index: 2;
+        width: 20px;
+        color: hsla(0, 0, 0, .2);
+        text-align: center;
+    }
+  
+    fieldset.email::after {
+        content: '\f0e0';
+    }
+  
+    fieldset.password::after {
+        content: '\f023';
+    }
+  
 }
