--- a/site/backend/src/views/users/create.ejs
+++ b/site/backend/src/views/users/create.ejs
@@ -3,47 +3,45 @@
     <%- include('../partials/head', {title: "Registrate"}) %>
 <body>
     <%- include('../partials/header') %>
+
     <div class="container">
-        <main class="registerForm">
-            <h1>Formulario de registro</h1>
-            <form action="/users/register" method="POST" enctype="multipart/form-data">
-                <div>
-                    <label for="first_name">Nombre:</label>
-                    <input type="text" id="first_name" name="first_name" placeholder="Ej. Jose de jesus" value="<% if (locals.old && old.first_name) { %><%= old.first_name %><% } %>">
-                    <% if (locals.errors && errors.first_name) { %>
-                        <p class="feedback"><%= errors.first_name.msg %> </p>
-                    <% } %>
+        <div class="registerContainer">
+            <div class="register">
+                <div class="register-classic">
+                    <h1>Formulario de registro</h1>
+                    <form class="form" action="/users/register" method="POST" enctype="multipart/form-data">
+                        <fieldset class="text">
+                            <input type="text" id="first_name" name="first_name" placeholder="Nombre:" value="<% if (locals.old && old.first_name) { %><%= old.first_name %><% } %>">
+                            <% if (locals.errors && errors.first_name) { %>
+                                <p class="feedback"><%= errors.first_name.msg %> </p>
+                            <% } %>
+                        </fieldset>
+                        <fieldset class="text">
+                            <input type="text" id="last_name" name="last_name" placeholder="Apellido:" value="<% if (locals.old && old.last_name) { %><%= old.last_name %><% } %>">
+                            <% if (locals.errors && errors.last_name) { %>
+                                <p class="feedback"><%= errors.last_name.msg %> </p>
+                            <% } %>
+                        </fieldset>
+                        <fieldset class="email">
+                            <input type="email" id="email" name="email" placeholder="Correo:" value="<% if (locals.old && old.email) { %><%= old.email %><% } %>">
+                            <% if (locals.errors && errors.email) { %>
+                                <p class="feedback"><%= errors.email.msg %> </p>
+                            <% } %>
+                        </fieldset>
+                        <fieldset class="password">
+                            <input type="password" name="password" id="password" placeholder="Contraseña:">
+                            <% if (locals.errors && errors.password) { %>
+                                <p class="feedback"><%= errors.password.msg %> </p>
+                            <% } %>
+                        </fieldset>
+                        <fieldset class="file">
+                            <input type="file" name="image" id="image" accept=".jpg, .png, .jpeg, .bmp, .tiff, .tif|image/*">
+                        </fieldset>
+                        <button type="submit" class="btn">Guardar</button>
+                    </form>
                 </div>
-                <div>
-                    <label for="last_name">Apellido:</label>
-                    <input type="text" id="last_name" name="last_name" placeholder="Ej. Aguirre Arzate" value="<% if (locals.old && old.last_name) { %><%= old.last_name %><% } %>">
-                    <% if (locals.errors && errors.last_name) { %>
-                        <p class="feedback"><%= errors.last_name.msg %> </p>
-                    <% } %>
-                </div>
-                <div>
-                    <label for="email">Correo electronico:</label>
-                    <input type="email" id="email" name="email" placeholder="Ej. jaguirre@email.com" value="<% if (locals.old && old.email) { %><%= old.email %><% } %>">
-                    <% if (locals.errors && errors.email) { %>
-                        <p class="feedback"><%= errors.email.msg %> </p>
-                    <% } %>
-                </div>
-                <div>
-                    <label for="password">Contrasena:</label>
-                    <input type="password" name="password" id="password">
-                    <% if (locals.errors && errors.password) { %>
-                        <p class="feedback"><%= errors.password.msg %> </p>
-                    <% } %>
-                </div>
-                <div>
-                    <label for="image">Avatar:</label>
-                    <input type="file" name="image" id="image" accept=".jpg, .png, .jpeg, .bmp, .tiff, .tif|image/*">
-                </div>
-                <div>
-                    <button type="submit">Guardar</button>
-                </div>
-            </form>
-        </main>
+            </div>
+        </div>
     </div>
 
     <%- include('../partials/footer') %>
