--- a/site/backend/src/views/users/detail.ejs
+++ b/site/backend/src/views/users/detail.ejs
@@ -9,6 +9,12 @@
             <h1>Detalle de usuario: <%= `${user.first_name} ${user.last_name}` %> </h1>
             <div>
                 <p>Imagen de perfil: </p>
+                <% if ( (user.id - 1) % 2 == 0) { %>
+                    <img loading="lazy" src="/images/min/users/<%= user.image %>" onerror="this.onerror=null; this.src='/images/min/users/default-f.jpeg'" alt="avatar  de <%= user.first_name %>">
+                <% } else{ %> 
+                    <img loading="lazy" src="/images/min/users/<%= user.image %>" onerror="this.onerror=null; this.src='/images/min/users/default-m.jpeg'" alt="avatar  de <%= user.first_name %>">
+                <% } %> 
+
                 <img src="/images/min/users/<%= user.image %>" alt="user avatar">
             </div>
             <div>
