--- a/site/backend/src/views/products/create.ejs
+++ b/site/backend/src/views/products/create.ejs
@@ -5,8 +5,8 @@
     <%- include('../partials/header') %>
 
     <div class="container">
-        <div class="createProductContainer">
-            <div class="newProd">
+        <div class="cardContainer">
+            <div class="card">
                 <div class="newProd-classic">
                     <h1>Formulario de creacion de un producto</h1>
                     <form class="form" action="/products/create" method="POST" enctype="multipart/form-data">
