--- a/site/backend/src/views/users/create.ejs
+++ b/site/backend/src/views/users/create.ejs
@@ -5,8 +5,8 @@
     <%- include('../partials/header') %>
 
     <div class="container">
-        <div class="registerContainer">
-            <div class="register">
+        <div class="cardContainer">
+            <div class="card">
                 <div class="register-classic">
                     <h1>Formulario de registro</h1>
                     <form class="form" action="/users/register" method="POST" enctype="multipart/form-data">
