--- a/site/backend/src/views/users/login.ejs
+++ b/site/backend/src/views/users/login.ejs
@@ -4,8 +4,8 @@
 <body>
     <%- include('../partials/header') %>
     <div class="container">
-        <div class="signupContainer">
-            <div class="signup">
+        <div class="cardContainer">
+            <div class="card">
                 <div class="signup-connect">
                     <h1>Crea tu cuenta</h1>
                     <a href="#" class="btn btn-social btn-facebook"><i class="fa fa-facebook"></i> Ingresa con Facebook</a>
