--- a/site/backend/gulp/scss/base/_globales.scss
+++ b/site/backend/gulp/scss/base/_globales.scss
@@ -14,6 +14,7 @@ body{
     font-family: $prin-fnt;
     font-size: 16px;
     line-height: 1.5;
+    background: hsl(86, 85%, 95%);
 }
 p{
     font-size: 2rem;
@@ -50,4 +51,132 @@ ul {
     width: 95%;
     margin: 0 auto;
     position: relative;
+}
+
+/*--------------------
+Buttons
+--------------------*/
+.btn {
+    display: block;
+    background: $aux;
+    color: hsl(0, 0, 100);
+    text-decoration: none;
+    margin: 20px 0;
+    padding: 15px 15px;
+    border-radius: 5px;
+    position: relative;
+  
+    &::after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: all .2s ease-in-out;
+        box-shadow: inset 0 3px 0 hsla(0, 0, 0, 0), 0 3px 3px hsla(0, 0, 0, .2);
+        border-radius: 5px;
+    }
+  
+    &:hover::after {
+        background: hsla(0, 0, 0, 0.1);
+        box-shadow: inset 0 3px 0 hsla(0, 0, 0, 0.2);
+    }
+  
+} 
+.btn-social {
+    padding-left: 64px;
+    position: relative;
+    z-index: 1;
+  
+    .fa {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 50px;
+        height: 100%;
+        text-align: center;
+        background: hsla(0, 0, 0, 0.1);
+        line-height: 3.2;
+        border-radius: 5px 0 0 5px;
+    }
+  
+}
+.btn-facebook {
+    background-color: hsl(221, 44%, 41%);
+}
+.btn-twitter {
+    background-color: hsl(206, 82%, 63%);
+}
+.btn-google {
+    background-color: hsl(7, 71%, 55%); 
+}
+.btn-linkedin {
+    background-color: hsl(196, 100%, 43%);
+}
+
+/*--------------------
+Forms
+--------------------*/
+.form {
+  
+    fieldset {
+        border: none;
+        padding: 0;
+        margin: 20px 0;
+        position: relative;
+    
+        input {
+            width: 100%;
+            height: 48px;
+            color: hsl(0, 0, 20);
+            padding: 15px 40px 15px 15px;
+            border-radius: 5px;
+            font-size: 14px;
+            outline: none!important;
+            border: 1px solid hsla(0, 0, 0, 0.3);
+            box-shadow: inset 0 1px 4px hsla(0, 0, 0, 0.2);
+            vertical-align: top;
+        }
+     
+    }
+  
+    button {
+        width: 100%;
+        outline: none!important;
+        background: $secon;
+        border: none;
+        text-transform: uppercase;
+        font-weight: bold;
+        box-shadow: 0 3px 0px hsla(86, 21%, 44%, 0.2);
+        text-shadow: 0 2px 3px hsla(0, 0, 0, 0.2);
+    }
+  
+}
+
+/*--------------------
+BigCards
+--------------------*/
+
+.cardContainer{
+    width: 100%;
+    height: auto;
+    padding: 5rem 7rem;
+}
+
+.card {
+    // position: absolute;
+    // top: 25rem;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
+    // z-index: 1;
+    margin: 0 auto;
+    width: 800px;
+    background: hsl(0, 0, 100);
+    border-radius: 10px;
+    box-shadow: 0 3px 25px hsla(0, 0, 0, 0.2);
+    overflow: hidden;
+    display: flex;
 }
