--- a/site/backend/src/views/products/detail.ejs
+++ b/site/backend/src/views/products/detail.ejs
@@ -5,54 +5,123 @@
     <%- include('../partials/header') %>
 
     <div class="container">
-        <main class="detailsPage">
-            <h1 class="productName">Detalle del producto: <%= product.name %> </h1>
-            <div class="detailsContent">
-                <div class="detailsInfo">
-                    <div>
-                        <p><%= product.description %></p>
-                    </div>
-                    <div>
-                        <h2><%= product.name %></h2>
-                    </div>
-                    <div>
-                        <p>$<%= product.price %></p>
-                    </div>
-                    <!-- <div>
-                        <p>product.discount % OFF</p>
-                    </div> -->
-                    <div>
-                        <p>Categorias:</p>
-                        <ul>
-                            <% for (let category of product.categories) { %>
-                                <li> <%= category.name %> </li>
-                            <% } %>  
-                        </ul>
-                    </div>
-                    <div>
-                        <p>Marca del producto:<%= product.brand.name %> </p>
+        <div class="detailContainer">
+            <div class="detail">
+                <div class = "card-wrapper">
+                    <div class = "card-inner">
+                        <!-- card left -->
+                        <div class = "product-imgs">
+                            <div class = "img-display">
+                                <div class = "img-showcase">
+                                    <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
+                                    <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
+                                    <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
+                                    <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
+
+                                </div>
+                            </div>
+                            <div class = "img-select">
+                                <div class = "img-item">
+                                    <a href = "#" data-id = "1">
+                                        <!-- <img src = "shoes_images/shoe_1.jpg" alt = "shoe image"> -->
+                                        <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
+                                    </a>
+                                </div>
+                                <div class = "img-item">
+                                    <a href = "#" data-id = "2">
+                                        <!-- <img src = "shoes_images/shoe_2.jpg" alt = "shoe image"> -->
+                                        <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
+                                    </a>
+                                </div>
+                                <div class = "img-item">
+                                    <a href = "#" data-id = "3">
+                                        <!-- <img src = "shoes_images/shoe_3.jpg" alt = "shoe image"> -->
+                                        <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
+                                    </a>
+                                </div>
+                                <div class = "img-item">
+                                    <a href = "#" data-id = "4">
+                                        <!-- <img src = "shoes_images/shoe_4.jpg" alt = "shoe image"> -->
+                                        <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card right -->
+                        <div class = "product-content">
+                            <h2 class = "product-title sectionTitle"><%= product.name %> </h2>
+                            <!-- <a href = "#" class = "product-link">visit nike store</a> -->
+                            <div class = "product-rating">
+                                <i class = "fas fa-star"></i>
+                                <i class = "fas fa-star"></i>
+                                <i class = "fas fa-star"></i>
+                                <i class = "fas fa-star"></i>
+                                <i class = "fas fa-star-half-alt"></i>
+                                <span>4.7(21)</span>
+                            </div>
+                            <div class = "product-price">
+                                <p class = "last-price">Precio: <span>$<%= product.price %></span></p>
+                                <p class = "new-price">Precio con descuento: <span>$<%= product.price * (1-0.05) %> (5%)</span></p>
+                            </div>
+                            <div class = "product-detail">
+                                <h2>Descripción: </h2>
+                                <p><%= product.description %></p>
+                                <ul>
+                                    <li>Marca: <span><%= product.brand.name %></span></li>
+                                    <li>Disponivilidad: <span>en stock</span></li>
+                                    <li>Categorias: <span>
+                                        <ul>
+                                            <% for (let category of product.categories) { %>
+                                                <li> <%= category.name %> </li>
+                                            <% } %>  
+                                        </ul>
+                                    </span></li>
+                                    <li>Envio: <span>Gratis</span></li>
+                                </ul>
+                            </div>
+                            <div class = "purchase-info">
+                                <input type = "number" min = "0" value = "1">
+                                <form class="form" method="GET">
+                                    <button type="submit" class="btn">
+                                        Agregar al carrito <i class = "fas fa-shopping-cart"></i> 
+                                    </button>
+                                </form>
+                                <% if ( logged_user != undefined && logged_user.role_id == 1 ) { %>
+                                    <form class="form" action="/products/<%= product.id %>/edit" method="GET">
+                                        <button type="submit" class="btn">
+                                            Editar <i class="fas fa-edit"></i>
+                                        </button>
+                                    </form>
+                                    <form class="form" action="/products/<%= product.id %>/delete" method="GET">
+                                        <button type="submit" class="btn">
+                                            Eliminar <i class="fas fa-trash-alt"></i>
+                                        </button>
+                                    </form>
+                                <% } %>
+                            </div>
+                            <div class = "social-links">
+                                <p>Comparte el producto: </p>
+                                <a href = "#">
+                                    <i class = "fab fa-facebook-f"></i>
+                                </a>
+                                <a href = "#">
+                                    <i class = "fab fa-twitter"></i>
+                                </a>
+                                <a href = "#">
+                                    <i class = "fab fa-instagram"></i>
+                                </a>
+                                <a href = "#">
+                                    <i class = "fab fa-whatsapp"></i>
+                                </a>
+                                <a href = "#">
+                                    <i class = "fab fa-pinterest"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="detailsProduct">
-                    <div>
-                        <img loading="lazy" src="/images/min/products/<%= product.image %>" onerror="this.onerror=null; this.src='/images/min/products/default.jpg'" alt="imagen de <%= product.name %>">
-                    </div>
-                    <div>
-                        <a href="/products/<%= product.id %>/edit">
-                            <button>Editar</button>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="/products/<%= product.id %>/delete">
-                            <button>Eliminar</button>
-                        </a>
-                    </div>
-                </div>
-                <form action="/#" method="POST">
-                    <button type="submit">Agregar al Carito</button>
-                </form>
             </div>
-        </main>
+        </div>
     </div>
 
     <%- include('../partials/footer') %>
