--- a/site/backend/src/views/users/detail.ejs
+++ b/site/backend/src/views/users/detail.ejs
@@ -5,39 +5,57 @@
     <%- include('../partials/header') %>
 
     <div class="container">
-        <main>
-            <h1>Detalle de usuario: <%= `${user.first_name} ${user.last_name}` %> </h1>
-            <div>
-                <p>Imagen de perfil: </p>
-                <% if ( (user.id - 1) % 2 == 0) { %>
-                    <img loading="lazy" src="/images/min/users/<%= user.image %>" onerror="this.onerror=null; this.src='/images/min/users/default-f.jpeg'" alt="avatar  de <%= user.first_name %>">
-                <% } else{ %> 
-                    <img loading="lazy" src="/images/min/users/<%= user.image %>" onerror="this.onerror=null; this.src='/images/min/users/default-m.jpeg'" alt="avatar  de <%= user.first_name %>">
-                <% } %> 
+        <div class="detailContainer">
+            <div class="detail">
+                <div class = "card-wrapper">
+                    <div class = "card-inner">
+                        <!-- card left -->
+                        <div class = "product-imgs">
+                            <div class = "img-display">
+                                <div class = "img-showcase">
+                                    <% if ( (user.id - 1) % 2 == 0) { %>
+                                        <img loading="lazy" src="/images/min/users/<%= user.image %>" onerror="this.onerror=null; this.src='/images/min/users/default-f.jpeg'" alt="avatar  de <%= user.first_name %>">
+                                    <% } else{ %> 
+                                        <img loading="lazy" src="/images/min/users/<%= user.image %>" onerror="this.onerror=null; this.src='/images/min/users/default-m.jpeg'" alt="avatar  de <%= user.first_name %>">
+                                    <% } %>
 
-                <img src="/images/min/users/<%= user.image %>" alt="user avatar">
+                                </div>
+                            </div>
+                            <div class = "img-select">
+                            </div>
+                        </div>
+                        <!-- card right -->
+                        <div class = "product-content">
+                            <h2 class = "product-title sectionTitle"><%= `${user.first_name} ${user.last_name}` %> </h2>
+                            <!-- <a href = "#" class = "product-link">visit nike store</a> -->
+                            <div class = "product-detail">
+                                <h2>Informacion: </h2>
+                                <ul>
+                                    <li>Nombre: <span><%= user.first_name %></span></li>
+                                    <li>Apellido: <span><%= user.last_name %></span></li>
+                                    <li>Correo electronico: <span><%= user.email %></span> </li>
+                                    <li>Categoria: <span><%= user.role.title %></span></li>
+                                </ul>
+                            </div>
+                            <div class = "purchase-info">
+                                <% if ( (logged_user != undefined && logged_user.id == user.id) || (logged_user != undefined && logged_user.role_id == 1) ) { %>
+                                    <form class="form" action="/users/<%= user.id %>/edit" method="GET">
+                                        <button type="submit" class="btn">
+                                            Editar <i class="fas fa-edit"></i> 
+                                        </button>
+                                    </form>
+                                    <form class="form" action="/users/<%= user.id %>/delete" method="GET">
+                                        <button type="submit" class="btn">
+                                            Eliminar <i class="fas fa-trash-alt"></i>
+                                        </button>
+                                    </form>
+                                <% } %>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
-                <p>Nombre del usuario: <%= user.first_name %> </p>
-            </div>
-            <div>
-                <p>Apellido del usuario: <%= user.last_name %> </p>
-            </div>
-            <div>
-                <p>Correo electronico del usuario: <%= user.email %> </p>
-            </div>
-            <div>
-                <p>Categoria del usuario: <%= user.role.title %> </p>
-            </div>
-            <div>
-                <a href="/users/<%= user.id %>/edit">Editar</a>
-            </div>
-            <button>
-                <a href="/users/<%= user.id %>/delete">
-                    Borrar
-                </a>
-            </button>
-        </main>
+        </div>
     </div>
 
     <%- include('../partials/footer') %>
