--- a/site/backend/gulp/scss/base/_globales.scss
+++ b/site/backend/gulp/scss/base/_globales.scss
@@ -146,7 +146,7 @@ Forms
     button {
         width: 100%;
         outline: none!important;
-        background: $secon;
+        // background: $aux;
         border: none;
         text-transform: uppercase;
         font-weight: bold;
@@ -154,6 +154,12 @@ Forms
         text-shadow: 0 2px 3px hsla(0, 0, 0, 0.2);
     }
   
+}
+.btn-blue{
+    background: $third;
+}
+.btn-red{
+    background: $secon;
 }
 
 /*--------------------
